# vynn-core

./: .env.example  .gitignore  INTEGRATION.md  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
tests/: test_articles.py  test_functionality.py  test_mongodb.py
vynn_core/: __init__.py  config.py  models.py
vynn_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vynn_core/dao/: articles.py  interactions.py  users.py
vynn_core/db/: mongo.py  redis.py
vynn_core/feed/: fanout.py  ranking.py
vynn_core/utils/: hashing.py
