[project]
name = "vynn_core"
version = "0.1.0"
description = "Minimal, production-ready news feed data layer for MongoDB/Redis."
authors = [
    {name = "vynn_core", email = "dev@vynn.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pymongo>=4.0.0",
    "redis>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "mongomock>=4.1.2",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
